Fix modal appearing behind table

--- a/src/style/project-appender.scss
+++ b/src/style/project-appender.scss
@@ -14,6 +14,7 @@ append-project {
     padding: 1em;
     background: white;
     text-align: center;
+    z-index:10;
     form {
       padding: 0 24px;
     }
